# master_mind

./: .gitignore  Cargo.toml
application/: Cargo.toml
application/src/: main.rs
engine/: Cargo.toml  build.rs
engine/src/: application.rs  event.rs  game.rs  lib.rs  logging.rs  platform_linux.rs  test.rs
engine/src/platform/: mod.rs  platform_linux.rs  platform_windows.rs
testbed/src/: main.rs
