[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[target.'cfg(unix)'.dependencies]
#x11 = "2.21.0"
xcb = "1.3.0"

[build-dependencies]
cc = "1.0.83"

[lib]
crate-type = ["rlib", "dylib"]