[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[target.'cfg(unix)'.dependencies]
#x11 = "2.21.0"
xcb = "1.3.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "^0.52.0", features = ["Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi"] }
winapi = { version = "^0.3.9", features = ["windowsx", "winuser"] }


[build-dependencies]
cc = "1.0.83"
winres = "0.1.12"

[lib]
crate-type = ["rlib", "dylib"]